Delete large files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .vscode
+robot/mira_description/urdf/mira.backup.dae
+robot/mira_description/urdf/temp/mira.dae
+robot/mira_description/urdf/mira.dae
